--- a/Challenges/Day 01 - JavaScript Drum Kit/DrumKit.html
+++ b/Challenges/Day 01 - JavaScript Drum Kit/DrumKit.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
+  <script src="scripts.js"></script>
   <title>DrumKit - JavaScript30</title>
 </head>
 <body>
