--- a/Challenges/Day 01 - JavaScript Drum Kit/DrumKit.html
+++ b/Challenges/Day 01 - JavaScript Drum Kit/DrumKit.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
-  <script src="scripts.js"></script>
   <title>DrumKit - JavaScript30</title>
 </head>
 <body>
@@ -16,35 +15,35 @@
     </div>
     <div class="key" data-key="83">
         <kbd>S</kbd>
-        <span>CLAP</span>
+        <span>HIHAT</span>
     </div>
     <div class="key" data-key="68">
         <kbd>D</kbd>
-        <span>CLAP</span>
+        <span>KICK</span>
     </div>
     <div class="key" data-key="70">
         <kbd>F</kbd>
-        <span>CLAP</span>
+        <span>OPENHAT</span>
     </div>
     <div class="key" data-key="71">
       <kbd>G</kbd>
-      <span>CLAP</span>
+      <span>BOOM</span>
     </div>
     <div class="key" data-key="72">
       <kbd>H</kbd>
-      <span>CLAP</span>
+      <span>RIDE</span>
     </div>
     <div class="key" data-key="74">
       <kbd>J</kbd>
-      <span>CLAP</span>
+      <span>SNARE</span>
     </div>
     <div class="key" data-key="75">
       <kbd>K</kbd>
-      <span>CLAP</span>
+      <span>TOM</span>
     </div>
     <div class="key" data-key="76">
       <kbd>L</kbd>
-      <span>CLAP</span>
+      <span>TINK</span>
     </div>
   </div>
 
@@ -58,5 +57,6 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
+  <script src="scripts.js"></script>
 </body>
 </html>
