added logic and css

--- a/Challenges/Day 02 - E02 JS and CSS Clock/Clock.html
+++ b/Challenges/Day 02 - E02 JS and CSS Clock/Clock.html
@@ -8,6 +8,11 @@
   <title>A Javascript Clock</title>
 </head>
 <body>
+  <div class="clock">
+    <div class="hand hour"></div>
+    <div class="hand minute"></div>
+    <div class="hand second"></div>
+  </div>
   <script src="scripts.js"></script>
 </body>
 </html>
