Added numbers to clock

--- a/Challenges/Day 02 - E02 JS and CSS Clock/Clock.html
+++ b/Challenges/Day 02 - E02 JS and CSS Clock/Clock.html
@@ -9,6 +9,18 @@
 </head>
 <body>
   <div class="clock">
+    <div class="number one"><div>1</div></div>
+    <div class="number two"><div>2</div></div>
+    <div class="number three"><div>3</div></div>
+    <div class="number four"><div>4</div></div>
+    <div class="number five"><div>5</div></div>
+    <div class="number six"><div>6</div></div>
+    <div class="number seven"><div>7</div></div>
+    <div class="number eight"><div>8</div></div>
+    <div class="number nine"><div>9</div></div>
+    <div class="number ten"><div>10</div></div>
+    <div class="number eleven"><div>11</div></div>
+    <div class="number twelve"><div>12</div></div>
     <div class="hand hour"></div>
     <div class="hand minute"></div>
     <div class="hand second"></div>
