--- a/Challenges/Day 03 - E03 CSS Variables/CssVars.html
+++ b/Challenges/Day 03 - E03 CSS Variables/CssVars.html
@@ -9,8 +9,7 @@
 </head>
 <body>
   <header class="title">
-    <h1>Update CSS</h1>
-    <h1>Variables with <span class="js">JS</span></h1>
+    <h1>Update CSS Variables with <span class="js">JS</span></h1>
   </header>
   <div class="controls">
     <div class="control">
